  following connection URI examples in the same way:

  .. code-block:: java
     
     // Connection URI with delimiting forward-slash
     String uri = "mongodb://example.com/?w=majority";

     // Connection URI without delimiting forward-slash
     String uri = "mongodb://example.com?w=majority";

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link

      :ref:`java-search-indexes` in the Indexes guide
  
   .. replacement:: encrypt-link

      the :ref:`In-Use Encryption <java-fle>` guide

   .. replacement:: vector-search-link

      :ref:`java-atlas-vector-search` in the Aggregates Builders guide

   .. replacement:: csot-link

      the `MongoClientSettings.Builder.timeout()
      <{+core-api+}/com/mongodb/MongoClientSettings.Builder.html#timeout(long,java.util.concurrent.TimeUnit)>`__
      API documentation

.. _java-version-5.1.3:

What's New in 5.1.3
-------------------

The 5.1.3 driver patch release includes the following changes:

.. sharedinclude:: dbx/jvm/v5.1.3-wn-items.rst

.. _java-version-5.1.2:

What's New in 5.1.2
-------------------

The 5.1.2 driver patch release includes the following changes:

- Fixes an issue that prevents the driver from encoding and
  decoding concrete classes that extend generic base classes, in cases that you
  specify the base class as the generic type of the ``MongoCollection`` instance.

- Fixes an issue related to how domain names are validated when you use
  SOCKS5 proxy functionality, allowing you to use domain names with more than
  six characters in the top-level domain.

.. _java-version-5.1.1:

What's New in 5.1.1
-------------------

The 5.1.1 driver patch release includes the following changes:

- When using the ``MONGODB-OIDC`` authentication mechanism, you must not
  include comma characters in the ``authMechanismProperties`` connection
  string value. To learn more about this behavior, see the
  :ref:`MONGODB-OIDC <java-authentication-oidc>` guide.
