@@ -22,6 +22,7 @@ Specify Connection Options
 .. toctree::
 
    Stable API </connection/specify-connection-options/stable-api>
+   Limit Execution Time </connection/specify-connection-options/csot>
    Connection Pools </connection/specify-connection-options/connection-pools>
    Cluster Settings </connection/specify-connection-options/cluster-settings>
    Server Settings </connection/specify-connection-options/server-settings>
@@ -38,6 +39,7 @@ This section describes the MongoDB connection and authentication options
 available in the {+driver-short+}. You can specify the following connection options: 
 
 - :ref:`Stable API <stable-api-java>`
+- :ref:`Limit Server Execution Time <java-csot>`
 - :ref:`Connection Pools <java-connection-pools>`
 - :ref:`Cluster Settings <mcs-cluster-settings>`
 - :ref:`Server Settings <mcs-server-settings>`
