@@ -87,10 +87,12 @@ see the corresponding syntax:
       
       * - ``maxPoolSize``
 
-        - Maximum number of connections opened in the pool. When the 
-          connection pool reaches the maximum number of connections, new 
-          connections wait up until to the value of 
-          ``waitQueueTimeoutMS``.
+        - Maximum number of connections opened in the pool. If an
+          operation needs a new connection while the connection pool has
+          ``maxPoolSize`` connections open, the new
+          operation waits for a new connection to open. To limit this
+          waiting time, use the single timeout setting. To learn more,
+          see the :ref:`java-csot` guide.
 
           *Default:* ``100`` 
 
@@ -102,11 +104,15 @@ see the corresponding syntax:
 
           *Default*: ``0``
 
-      * - ``waitQueueTimeoutMS``
+      * - ``waitQueueTimeoutMS`` *(deprecated)*
 
-        - Maximum wait time in milliseconds that an operation can wait for 
+        - This option is deprecated. You can configure this timeout by
+          setting the the :ref:`client-level timeout <java-csot>`
+          instead.
+
+          Maximum wait time in milliseconds that an operation can wait for 
           a connection to become available. A value of ``0`` means there
-          is no limit. 
+          is no limit.
 
           *Default*: ``120000`` (120 seconds)
 
