@@ -5,8 +5,6 @@
 {+stable-api+}
 ==============
 
-
-
 .. contents:: On this page
    :local:
    :backlinks: none
@@ -147,4 +145,3 @@ API Documentation:
 
 - `strict() <{+core-api+}/ServerApi.Builder.html#strict(boolean)>`__
 - `deprecationErrors() <{+core-api+}/ServerApi.Builder.html#>`__
-
